--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "nth-check": "^2.0.1",
     "react-scripts": "5.0.1"
   },
