--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "styled-components": "^5.3.5",
+    "vercel": "^31.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
